@@ -1,0 +1,36 @@
+/*
+ * Copyright 2015 peterk.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package com.graphhopper.routing.util;
+
+import org.junit.Test;
+import static org.junit.Assert.*;
+
+/**
+ *
+ * @author Peter Karich
+ */
+public class AbstractWeightingTest
+{
+    @Test
+    public void testToString()
+    {
+        assertTrue(AbstractWeighting.isValidName("blup"));
+        assertTrue(AbstractWeighting.isValidName("blup_a"));
+        assertTrue(AbstractWeighting.isValidName("blup|a"));
+        assertFalse(AbstractWeighting.isValidName("Blup"));
+        assertFalse(AbstractWeighting.isValidName("Blup!"));
+    }
+}
