@@ -1,4 +1,5 @@
 0.6
+    more strict naming for Weighting enforced and more strict matching to select Weighting (equals check), #490
     specify the preferred-language for way names during graph import (ISO 639-1 or ISO 639-2)
 
 0.5
